--- a/package.json
+++ b/package.json
@@ -8,29 +8,29 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap": "^4.5.2",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.5.0",
-    "bootstrap-vue": "^2.17.3",
-    "core-js": "^3.6.5",
+    "bootstrap-vue": "^2.21.2",
+    "core-js": "^3.17.2",
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
-    "vue": "^2.6.11",
+    "vue": "^2.6.14",
     "vue-router": "^3.5.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.0",
+    "@vue/cli-plugin-eslint": "^4.5.0",
     "@vue/cli-plugin-router": "^4.5.13",
-    "@vue/cli-service": "~4.5.0",
-    "axios": "^0.18.0",
+    "@vue/cli-service": "^4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
-    "vue-cli-plugin-axios": "0.0.4",
-    "vue-cli-plugin-bootstrap-vue": "~0.8.1",
+    "vue-cli-plugin-axios": "^0.0.4",
+    "vue-cli-plugin-bootstrap-vue": "^0.8.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
