Added an increase the max upload size, default is 1M and that's not big enough for some sounds, 10M seems much more reasonable

--- a/nginx/rfidsecurityui.template
+++ b/nginx/rfidsecurityui.template
@@ -1,6 +1,7 @@
 server {
   error_page            500 502 503 504  /50x.html;
   listen                80;
+  client_max_body_size  10M;
   server_name           localhost;
 
   location / {
