--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "vue-router": "^3.6.5"
   },
   "devDependencies": {
+    "@vue/cli": "^4.5.19",
+    "@vue/cli-service": "^4.5.19",
     "@vue/cli-plugin-babel": "^4.5.19",
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-router": "^4.5.19",
-    "@vue/cli-service": "^5.0.8",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^7.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.55.0",
     "sass-loader": "^10.3.1",
